<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/WF1F3F5"
    style="@style/LayoutMatchParent">

    <LinearLayout
        android:layout_height="54dp"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp"
        android:paddingHorizontal="26dp"
        android:background="@color/white"
        android:gravity="center"
        style="@style/LayoutWidthMatch">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/icon_all"/>
        <TextView
            android:id="@+id/textView_total"
            android:layout_marginHorizontal="6dp"
            android:text="@string/total_count"
            style="@style/BlackText"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginVertical="6dp"
        android:paddingHorizontal="14dp"
        style="@style/LayoutWidthMatch">
        <TextView
            android:text="@string/epc_company_item_serial"
            style="@style/LightGrayText"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_saveListDetail"
        style="@style/LayoutHeightFill"/>

    <Button
        android:id="@+id/button_download"
        android:text="@string/download"
        style="@style/BlackButton"/>
</LinearLayout>