<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/WF1F3F5"
    style="@style/LayoutMatchParent">

    <include
        layout="@layout/tool_bar"/>

    <LinearLayout
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        style="@style/LayoutHeightFill">

        <LinearLayout
            android:orientation="vertical"
            android:paddingHorizontal="1dp"

            style="@style/LayoutHeightFill"
            android:layout_weight="0.5"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:orientation="horizontal"
                android:padding="3dp"
                android:gravity="center_horizontal|center_vertical"
                >


                <TextView
                    android:id="@+id/editTag"
                    style="@style/Widget.View.MessageTextView"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textColor="@color/black"
                    android:background="@color/message_background"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="3dp"
                >

                <EditText
                    android:id="@+id/editBarcode"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="2dp"
                    android:layout_marginTop="2dp"
                    android:ems="10"
                    android:singleLine="true"

                    android:imeOptions="actionDone"
                    android:text=""
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="14dp"
                    android:layout_weight='1'
                    android:inputType="textCapCharacters"
                    />
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="3dp"
                >






                <Button
                    android:id="@+id/btnRead"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:text="@string/read"
                    style="@style/Widget.AppCompat.Button.Colored"
                    />
                <View
                    android:layout_width="1dp"
                    android:layout_height="1dp" />

                <Button
                    android:id="@+id/btnWrite"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:text="@string/write"
                    style="@style/Widget.AppCompat.Button.Colored"
                    />
            </LinearLayout>




        </LinearLayout>






        <LinearLayout
            android:orientation="vertical"
            android:paddingHorizontal="1dp"
            style="@style/LayoutHeightFill"

            android:layout_weight="1.3"
            >


            <ListView
                android:id="@+id/tag_list"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:layout_weight="3"
                android:background="@drawable/border" />

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp" />




            <TextView
                android:id="@+id/textView_Rdata"
                style="@style/Widget.View.ValueTextView"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="0dp"
                android:layout_marginTop="2dp"
                android:text=""
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="18dp"

                android:visibility="gone"/>


        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="0dp"
            style="@style/LayoutWidthMatch"
            android:layout_weight="0.1"
            android:visibility="gone"
            >


            <TextView
                android:id="@+id/textView_Power"
                style="@style/BlackText"
                android:layout_marginHorizontal="10dp"
                android:text="@string/power_value"

                />

            <TextView
                android:id="@+id/textView_wPower"
                style="@style/BlackText"
                android:layout_marginHorizontal="10dp"
                android:text="@string/wpower_value" />



        </LinearLayout>

    </LinearLayout>
</LinearLayout>