<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context=".view.MemoryView"
    >

    <include
        layout="@layout/tool_bar"/>

    <!-- Selection Mask -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/selection_background"
        android:orientation="vertical" >

        <TextView android:id="@+id/selection"
            style="@style/Widget.View.SelectMaskTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <View android:layout_width="match_parent" android:layout_height="5dp" />

    <!-- Result Message -->
    <LinearLayout android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:background="@color/message_background"
        android:orientation="horizontal" >

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/message"
            style="@style/Widget.View.MessageTextView"
            android:layout_width="match_parent"
            android:layout_height="52dp" />

    </LinearLayout>

    <View android:layout_width="match_parent" android:layout_height="5dp" />

    <!-- Read EPC  Memory Value -->
    <TextView
        style="@style/Widget.View.LabelTextView"
        android:id="@+id/textview_epcbits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text= "EPC : " />

    <ListView
        android:id="@+id/read_value"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/border" />

    <View android:layout_width="match_parent" android:layout_height="5dp" />

    <!-- Read EPC  Memory Value -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="3dp" >
        <TextView
            style="@style/Widget.View.LabelTextView"
            android:id="@+id/textview_utidbits"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="UTID : " />



    </LinearLayout>

    <ListView
        android:id="@+id/read_utid_value"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="@drawable/border" />

    <View android:layout_width="match_parent" android:layout_height="5dp" />

    <!-- Read EPC  Memory Value -->
    <TextView
        style="@style/Widget.View.LabelTextView"
        android:id="@+id/textview_userbits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="USER DATA : " />

    <ListView
        android:id="@+id/read_user_value"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/border" />

    <View android:layout_width="match_parent" android:layout_height="5dp" />


    <!-- Read Memory Parameters -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="3dp" >



        <TextView
            style="@style/Widget.View.LabelTextView"
            android:id="@+id/textview_higgsType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text=""
            android:visibility="gone"/>


        <TextView
            android:id="@+id/read_memory_param"
            style="@style/Widget.View.LabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/read_memory_param"
            android:visibility="gone"
            />


    </LinearLayout>




    <!-- Buttons -->

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow >

            <Button android:id="@+id/btnAction"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/action_read" />


            <Button android:id="@+id/btnClear"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/clear" />

        </TableRow>


    </TableLayout>

</LinearLayout>
